# xfem-in-cpp

./: CMakeLists.txt  FEM.json  Main.cxx  README.md  XFEM.json  evaluateConvergence.py  python_utilities.py  simplifiedUsage.py
XFEM/: CMakeLists.txt
XFEM/include/: CutModelTopology_CGAL.h  FEM_Elementtype.h  LinearTetrahedron.h  XFemLinearTetrahedron.h  loadCutModelTopologyInVectorXFEMLinearTetrahedra.h  utils.h
XFEM/src/: CutModelTopology_CGAL.cpp  LinearTetrahedron.cpp  XFemLinearTetrahedron.cpp  loadCutModelTopologyInVectorXFEMLinearTetrahedra.cpp
output/Liver/displacedObject/: XFEM_Visualization.vtk  XFEM_Visualization_completelyCut_above.vtk  XFEM_Visualization_completelyCut_below.vtk  XFEM_Visualization_partiallyCut_above.vtk  XFEM_Visualization_partiallyCut_below.vtk  XFEM_Visualization_uncutElements.vtk
output_Abaqus/FEM_Tet4_6ts2x4x14/: Info.json  executableOutput
output_Abaqus/FEM_Tet4_6ts2x4x14/displacedObject/: XFEM_Visualization.vtk  XFEM_Visualization_partiallyCut_above.vtk
output_Abaqus/FEM_Tet4_6ts4x8x26/: executableOutput
scenes/: FEM_Tet4_6ts2x4x14.xml  FEM_Tet4_6ts4x8x26.xml  Liver.xml  Liver888Tet4.vtk  sceneTemplateForConvergence.xml
scenes/meshCut/: CutCircle.vtk  CutCircleSeveralRows.vtk  CutDecliningSine.vtk  CutHorizontal.vtk  CutHorizontalDeep.vtk  CutLiver.vtk  CutPartialCircle.vtk  CutPartialCircle2.vtk  CutThatDoesntTouchBeam.vtk  CutVertical.vtk  CutZickzack.vtk  cutBelowMiddle.vtk  noCut.vtk
scenes/meshCutObjectForEvaluation/: FEM_Tet4_6ts2x4x14.vtk  FEM_Tet4_6ts4x8x26.vtk  FEM_Tet4_6ts6x12x40.vtk  createFEMInput.m  createFEMInput.m~
scenes/meshObjectForEvaluation/: Beam_Nelem_1810.vtk  Beam_Nelem_19128.vtk  Beam_Nelem_371.vtk  Beam_Nelem_4621.vtk  Beam_Nelem_712.vtk  Beam_Nelem_8990.vtk  Beam_Nelem_97.vtk
